# Change Log
All notable changes to this project will be documented in this file.


## [1.19] 2020-30-5

### Added
  - Worksheet#each_rowvalue


## [1.18] 2020-30-4

### Added
  - Workbook#worksheets, worksheets_count
  - Worksheet#each_value
  - Range#value, value=
  - Range#initialize: optional paramter worksheet

## [1.17]

### Added
  - Excel#active_workbook

### Changed
  - Excel#namevalue, set_namevalue, namevalue_glob, set_namevalue_glob are being removed

## [1.16]

### Added
   - RangeOwners#set_namevalue, set_namevalue_glob, Worksheet#set_cellval: 
     optional parameter for color 
   
### Changed   
   - Workbook#color_if_modified removed   

## [1.15]

### Added
   - Workbook#unobtrusively, Workbook#for_reading, Workbook#for_modifying

### Changed
   - Workbook.unobtrusively: removed parameter :rw_change_excel
   
## [1.14]

  - no interface change

## [1.13]

  - no interface change

## [1.12]

### Added
   - Workbook.open: option :if_unsaved => :save
   - Workbook#color_if_modified

### Changed:
   - Workbook#save, save_as: removed parameter :discoloring
   - RangeOwners#set_namevalue, set_namevalue_glob, Worksheet#set_cellval: 
     removed optional parameter for color 
   - Workbook#open: removed option :excel => :reserved_new  


## [1.11]

### Added
  - Range#==, Worksheet#== 
  - Workbook#open: options :if_blocked is synonym to :if_obstructed
  - Simplified Code

## [1.10]

### Added
  - Range,Cell#v

## [1.9]

### Added
  - Workbook#create
  - Excel#workbooks, each_workbook, each_workbook_with_index
  - Address#int_range,#r1c1,#a1
  - ReoCommon::RangeOwners#add_name: allowing infinite ranges

## [1.6]

### Added
  - Range#copy: options values_only, transpose

## [1.5]

### Changed
  - Range,Cell#v
  - Range,Cell: lower-letter VBA methods allowed

## [1.4.1]

### Changed
  - renamed Worksheet#name2range to ReoCommon#range

## [1.4]

### Changed
  - renamed Book to Workbook, Sheet to Worksheet
  - General#to_reo