@@ -5,6 +5,7 @@ All notable changes to this project will be documented in this file.
 ## [1.19] 2020-30-5
 
 ### Added
+  - Workheet#values
   - Worksheet#each_rowvalue
 
 
